@@ -3,27 +3,21 @@ package com.example.eventplanner.services.user;
 import com.example.eventplanner.dto.common.AddressDTO;
 import com.example.eventplanner.dto.event.EventOverviewDTO;
 import com.example.eventplanner.dto.user.*;
-import com.example.eventplanner.dto.user.auth.RegisterEoRequestDTO;
-import com.example.eventplanner.dto.user.auth.RegisterEoRequestResponseDTO;
-import com.example.eventplanner.dto.user.auth.RegisterSpRequestDTO;
-import com.example.eventplanner.dto.user.auth.RegisterSpRequestResponseDTO;
 import com.example.eventplanner.dto.user.update.*;
 import com.example.eventplanner.model.common.Address;
 import com.example.eventplanner.model.event.Event;
-import com.example.eventplanner.model.merchandise.Merchandise;
 import com.example.eventplanner.model.user.*;
 import com.example.eventplanner.repositories.event.EventRepository;
 import com.example.eventplanner.repositories.message.MessageRepository;
 import com.example.eventplanner.repositories.user.*;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.jpa.repository.support.SimpleJpaRepository;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
+import java.time.LocalDateTime;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -232,94 +226,52 @@ public class UserService {
         }
     }
 
-    public List<UserOverviewDTO> getServiceProvidersForOrganizerEvents(int organizerId) {
-        // Fetch the Event Organizer by ID
-        EventOrganizer organizer = eventOrganizerRepository.findById(organizerId)
-                .orElseThrow(() -> new EntityNotFoundException("Event Organizer not found with ID: " + organizerId));
 
-        // Fetch all events organized by the Event Organizer
-        List<Event> organizedEvents = organizer.getOrganizingEvents();
 
-        // Fetch unique Service Providers for Merchandise in the events' budgets
-        List<UserOverviewDTO> serviceProviders = organizedEvents.stream()
-                .flatMap(event -> event.getMerchandise().stream()) // Get merchandise from each event
-                .distinct() // Avoid duplicate merchandise
-                .map(merchandise -> serviceProviderRepository.findByMerchandiseId(merchandise.getId())
-                        .orElseThrow(() -> new EntityNotFoundException("Service Provider not found for merchandise ID: " + merchandise.getId())))
-                .distinct() // Avoid duplicate service providers
-                .filter(serviceProvider -> !organizer.getBlockedUsers().contains(serviceProvider)) // Remove blocked users
-                .map(this::convertToUserOverviewDTO) // Convert to DTO
-                .toList();
 
-        return serviceProviders;
-    }
-
-    public List<UserOverviewDTO> getAuWhoMessagedEo(int organizerId) {
-        EventOrganizer organizer = eventOrganizerRepository.findById(organizerId)
-                .orElseThrow(() -> new RuntimeException("Organizer not found with ID: " + organizerId));
-
-        List<Message> messages = messageRepository.findByRecipientId(organizerId);
-
-        // Extract senders who are AuthenticatedUsers and not blocked by the Organizer
-        return messages.stream()
-                .map(Message::getSender) // Get the sender of the message
-                .filter(user -> user instanceof AuthenticatedUser) // Keep only AuthenticatedUsers
-                .filter(user -> !organizer.getBlockedUsers().contains(user)) // Remove users blocked by Organizer
-                .distinct() // Remove duplicates
-                .map(this::convertToUserOverviewDTO) // Convert to UserOverviewDTO
-                .toList(); // Collect the result as a list
-    }
-
-    public List<UserOverviewDTO> getChatUsersForEo(int organizerId) {
-        // Fetch users who are authenticated and messaged the organizer
-        List<UserOverviewDTO> users = new ArrayList<>(getAuWhoMessagedEo(organizerId));
-
-        // Fetch service providers for the organizer's events and add them to the list
-        users.addAll(getServiceProvidersForOrganizerEvents(organizerId));
-
-        return users;
-    }
-
-    public List<UserOverviewDTO> getChatUsersForAu(int userId) {
-        // Fetch the current user
+    public List<UserOverviewDTO> getChatUsers(int userId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new RuntimeException("User not found with ID: " + userId));
 
-        // Get the blocked users list
-        List<User> blockedUsers = user.getBlockedUsers();
+        // Get all messages for this user
+        List<Message> allMessages = messageRepository.findByRecipientIdOrSenderId(userId, userId);
 
-        // Return all event organizers excluding blocked ones
-        return eventOrganizerRepository.findAll().stream()
-                .filter(organizer -> !blockedUsers.contains(organizer)) // Exclude blocked organizers
-                .map(this::convertToUserOverviewDTO)
-                .toList();
-    }
+        // Get unique user IDs from messages
+        Set<Integer> chatUserIds = allMessages.stream()
+                .map(message -> message.getSender().getId() == userId ?
+                        message.getRecipient().getId() : message.getSender().getId())
+                .collect(Collectors.toSet());
 
-    public List<UserOverviewDTO> getEoWhoMessagedSp(int serviceProviderId) {
-        // Fetch the Service Provider by ID
-        ServiceProvider serviceProvider = serviceProviderRepository.findById(serviceProviderId)
-                .orElseThrow(() -> new RuntimeException("Service Provider not found with ID: " + serviceProviderId));
+        // Map each user ID to their latest message time
+        Map<Integer, LocalDateTime> latestMessageTimes = new HashMap<>();
+        for (Integer chatUserId : chatUserIds) {
+            LocalDateTime latestTime = allMessages.stream()
+                    .filter(msg -> msg.getSender().getId() == chatUserId || msg.getRecipient().getId() == chatUserId)
+                    .map(Message::getSentTIme)
+                    .max(LocalDateTime::compareTo)
+                    .orElse(LocalDateTime.MIN);
+            latestMessageTimes.put(chatUserId, latestTime);
+        }
 
-        // Fetch all messages where the recipient is the service provider
-        List<Message> messages = messageRepository.findByRecipientId(serviceProviderId);
-
-        // Extract senders who are EventOrganizers and are not blocked by the Service Provider
-        return messages.stream()
-                .map(Message::getSender) // Get the sender of the message
-                .filter(user -> user instanceof EventOrganizer) // Keep only EventOrganizers
-                .filter(user -> !serviceProvider.getBlockedUsers().contains(user)) // Remove EventOrganizers blocked by the Service Provider
-                .distinct() // Remove duplicates
-                .map(this::convertToUserOverviewDTO) // Convert to UserOverviewDTO
-                .toList(); // Collect the result as a list
+        // Convert to DTOs
+        return latestMessageTimes.entrySet().stream()
+                .map(entry -> {
+                    User chatUser = userRepository.findById(entry.getKey())
+                            .orElseThrow(() -> new RuntimeException("User not found"));
+                    if (user.getBlockedUsers().contains(chatUser)) {
+                        return null;
+                    }
+                    return convertToUserOverviewDTO(chatUser);
+                })
+                .filter(Objects::nonNull)
+                .sorted(Comparator.<UserOverviewDTO, LocalDateTime>comparing(dto -> latestMessageTimes.get(dto.getId())).reversed())
+                .collect(Collectors.toList());
     }
 
     private UserOverviewDTO convertToUserOverviewDTO(User user) {
-        return new UserOverviewDTO(user.getId(), user.getUsername(), user.getName(), user.getSurname(), user.getPhoto());
+        return new UserOverviewDTO(user.getId(), user.getUsername(), user.getName(), user.getSurname(), user.getPhoto(),user.getRole());
     }
 
-    private UserOverviewDTO  convertToUserOverviewDTO(ServiceProvider sp){
-        return new UserOverviewDTO(sp.getId(),sp.getUsername(),sp.getName(),sp.getSurname(),sp.getPhoto());
-    }
 
     public BlockUserDTO blockUser(int blockerId, int blockedUserId) {
         // Validate the blocker and the blocked user
@@ -343,11 +295,17 @@ public class UserService {
         return new BlockUserDTO(blockerId, blockedUserId);
     }
 
-    public UserOverviewDTO getMessagedSp(int id) {
-        ServiceProvider serviceProvider = serviceProviderRepository.findById(id).orElseThrow(
-                () -> new RuntimeException("Service Provider not found with id: " + id)
+    public List<UserOverviewDTO> getBlockedUsers(int blockerId) {
+        User blocker = userRepository.findById(blockerId)
+                .orElseThrow(() -> new RuntimeException("Blocker user not found with ID: " + blockerId));
+        return blocker.getBlockedUsers().stream().map(this::convertToUserOverviewDTO).collect(Collectors.toList());
+    }
+
+    public UserOverviewDTO getMessagedChatUser(int id) {
+        User user = userRepository.findById(id).orElseThrow(
+                () -> new RuntimeException("user not found with id: " + id)
         );
 
-        return convertToUserOverviewDTO(serviceProvider);
+        return convertToUserOverviewDTO(user);
     }
 }
